<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="co.com.cardinalscale.autopesotruck.MainActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:id="@+id/relativeLayoutSuperior">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <!--   <EditText
       android:id="@+id/txtUserNmae"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_person"
         android:ems="10"
         android:hint="@string/txtUsuario"
         android:inputType="textPersonName"
         android:textColor="@android:color/background_light"
         android:textSize="16dp"
         android:layout_marginBottom="12dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true">
        <EditText
            android:id="@+id/txtUserNmae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtUsuario"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
    
 <RelativeLayout
     android:id="@+id/relativeLayoutInferior"
     android:layout_width="match_parent"
     android:layout_height="350dp"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true"
     android:layout_below="@+id/relativeLayoutSuperior">

    <!-- <EditText
         android:id="@+id/txtPassword"
         android:layout_width="300dp"
         android:layout_height="40dp"
         android:background="#11000000"
         android:drawableLeft="@drawable/ic_lock"
         android:ems="10"
         android:hint="@string/txtclave"
         android:inputType="textPassword"
         android:textColor="@android:color/background_light"
         android:textSize="16dp"
         android:layout_marginTop="14dp"
         android:layout_centerHorizontal="true"
         tools:ignore="UnknownId" />-->
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_contrasena"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:layout_marginTop="10dp">
         <EditText
             android:id="@+id/txtClave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/txtclave"
             android:inputType="numberPassword"/>
     </android.support.design.widget.TextInputLayout>

     <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btnLogin"
         android:text="@string/BtnIngresar"
         android:textColor="@android:color/white"
         android:layout_centerInParent="true"
         android:background="@drawable/shape_default"
         app:spinning_bar_color="#fff"
         app:spinning_bar_padding="6dp"
         app:spinning_bar_width="4dp"
         android:onClick="Login"/>

 </RelativeLayout>


</RelativeLayout>
